Implement complete Finance Dashboard Backend with Spring Boot
Agent-Logs-Url: https://github.com/nazeer-shaik-01/finance-dashboard-backend/sessions/9e2ef108-f46d-42cc-833b-04272f79b4ad

Co-authored-by: nazeer-shaik-01 <199257413+nazeer-shaik-01@users.noreply.github.com>